[gd_scene load_steps=39 format=2]

[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/IceBoss.gd" type="Script" id=1]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/IceParticule.png" type="Texture" id=2]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossice0marche.png" type="Texture" id=3]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossice2d√©sense.png" type="Texture" id=4]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossice3crache.png" type="Texture" id=5]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossice4focusattaquezone.png" type="Texture" id=6]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossice.png" type="Texture" id=7]
[ext_resource path="res://assets/images/Ennemis/Ice/Boss/bossiceIdle.png" type="Texture" id=8]
[ext_resource path="res://state/StateMachine.tscn" type="PackedScene" id=9]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/IceBossFSM.gd" type="Script" id=10]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/Spawn.gd" type="Script" id=11]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/RoamSequence.gd" type="Script" id=12]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/Wait.gd" type="Script" id=13]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/MoveTo.gd" type="Script" id=14]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/IcicleAttack.gd" type="Script" id=15]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/BreathAttack.gd" type="Script" id=16]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/SummonShieldFront.gd" type="Script" id=17]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/SummonShieldBack.gd" type="Script" id=18]
[ext_resource path="res://ARPG/Ennemies/Boss/IceBoss/Die.gd" type="Script" id=19]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.333333, 0.977778, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Curve" id=3]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.681971, 100 ), 629.95, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -200.0
max_value = 200.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.98944, 2.6398 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
max_value = 2.5
_data = [ Vector2( 0.00428528, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 2.5 ), 0.0806229, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 20.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1500.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel_curve = SubResource( 6 )
damping_curve = SubResource( 4 )
scale_curve = SubResource( 8 )
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 158.678, 156.002 )

[sub_resource type="Animation" id=12]
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 1, 2, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 0.277392, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -70 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Particles2DBreath:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Area2D/CollisionPolygon2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Area2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1.5, 2.7, 3.4, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "Die"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.1, 0.1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0, 20.0, -20.0, 20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.4, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=13]
resource_name = "IcicleAttack"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 1, 3, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 0.366021, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.3, 1.3 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/IcicleAttack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "target_player"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=15]
resource_name = "ShieldBack"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/SummonShieldBack")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summonShield"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "ShieldFront"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("StateMachine/SummonShieldFront")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "summonShield"
} ]
}

[sub_resource type="Animation" id=17]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.3, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.3, 1.5, 1.7, 1.9, 2.1, 2.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -20.0, 20.0, -20.0, 20.0, -20.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}

[node name="IceBoss" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 913.674, 174.732 )
scale = Vector2( 0.1, 0.1 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Particles2DBreath" type="Particles2D" parent="."]
position = Vector2( 5, 225 )
rotation = 1.5708
emitting = false
amount = 1200
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
frame = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BreathAttack = SubResource( 12 )
anims/Die = SubResource( 19 )
anims/IcicleAttack = SubResource( 13 )
anims/Idle = SubResource( 14 )
anims/ShieldBack = SubResource( 15 )
anims/ShieldFront = SubResource( 16 )
anims/Spawn = SubResource( 17 )
anims/Walk = SubResource( 18 )

[node name="StateMachine" parent="." instance=ExtResource( 9 )]
script = ExtResource( 10 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="RoamSequence" type="Node" parent="StateMachine"]
editor/display_folded = true
script = ExtResource( 12 )

[node name="Wait" type="Node" parent="StateMachine/RoamSequence"]
editor/display_folded = true
script = ExtResource( 13 )

[node name="Timer" type="Timer" parent="StateMachine/RoamSequence/Wait"]
wait_time = 3.0

[node name="MoveTo" type="Node" parent="StateMachine/RoamSequence"]
script = ExtResource( 14 )

[node name="IcicleAttack" type="Node" parent="StateMachine"]
script = ExtResource( 15 )

[node name="BreathAttack" type="Node" parent="StateMachine"]
script = ExtResource( 16 )

[node name="SummonShieldFront" type="Node" parent="StateMachine"]
script = ExtResource( 17 )

[node name="SummonShieldBack" type="Node" parent="StateMachine"]
script = ExtResource( 18 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 19 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 5.01172, 225.172 )
scale = Vector2( 0.1, 0.1 )
collision_layer = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
scale = Vector2( 0.1, 0.1 )
polygon = PoolVector2Array( -5243.07, 14009.8, -45.7809, 14479.6, 5052.94, 13863, 0, 0 )
disabled = true

[node name="Tween" type="Tween" parent="."]

[node name="Position2DShieldFront" type="Position2D" parent="."]
position = Vector2( 3.79468, 314.966 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/RoamSequence/Wait/Timer" to="StateMachine/RoamSequence/Wait" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
